# 5400-Final-Project

./: README.md  logs.txt
JANAS/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
JANAS/JANAS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
JANAS/data/: 2024-12-14_16-18-53_american_scraped_articles.csv  2024-12-14_16-18-53_japanese_scraped_articles.csv  2024-12-14_16-18-53_japanese_translated_sentiment.csv  2024-12-14_16-18-53_sentiment.csv  2024-12-14_16-25-52_american_scraped_articles.csv  2024-12-14_16-25-52_japanese_scraped_articles.csv  2024-12-14_16-25-52_japanese_translated_sentiment.csv  2024-12-14_16-25-52_sentiment.csv  2024-12-14_19-41-03_japanese_scraped_articles.csv  2024-12-14_19-53-14_american_scraped_articles.csv  2024-12-14_19-53-14_japanese_scraped_articles.csv  2024-12-14_20-08-30_american_scraped_articles.csv  2024-12-14_20-08-30_japanese_scraped_articles.csv  2024-12-14_20-15-07_american_scraped_articles.csv  2024-12-14_20-15-07_japanese_scraped_articles.csv  2024-12-14_20-37-06_american_scraped_articles.csv  2024-12-14_20-37-06_japanese_scraped_articles.csv  2024-12-14_20-49-32_american_scraped_articles.csv  2024-12-14_20-49-32_japanese_scraped_articles.csv  2024-12-14_20-58-48_american_scraped_articles.csv  2024-12-14_20-58-48_japanese_scraped_articles.csv  american_scraped_articles.csv  japanese_scraped_articles.csv  merged_sentiment.csv
JANAS/docs/: Makefile  conf.py  example.ipynb  make.bat
JANAS/tests/: test_JANAS.py
JANAS/website/: _quarto.yml  authors.qmd  custom.scss  data.qmd  (+4 more)
(+28 files in other folders)
